Multi-commit: - Intermediate commit for product rule calculator. - Connect model factory and test on the zcrit reaction. - Add Damkohler Limiter. - Fix units in Damkohler model. - Change name of temperature rate to chemical temperature rate.

--- a/Examples/Propagation/stack_plot.ipynb
+++ b/Examples/Propagation/stack_plot.ipynb
@@ -22,7 +22,8 @@
    "outputs": [],
    "source": [
     "# Read in pickled output\n",
-    "cap_dict, data, rates = p.load(open('./propagation_output.p', 'r'))"
+    "with open('./propagation_output.p', 'rb') as f:\n",
+    "    cap_dict, data, rates = p.load(f)"
    ]
   },
   {
